# opengl-tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TODO.md  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h  basic.shader  main.cpp
res/shaders/: basic.shader
src/: .Application.cpp.swp  Application.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h  TestTexture3D.cpp  TestTexture3D.h
